--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
         <div class="divLR">
             <div class="divLogIn">
                 <form class="logInForm">
-                    <input class="Lpseudo" type="text" placeholder="Login"><br>
-                    <input class="Lpass" type="password" placeholder="Password"><br>
-                    <input class="Lcheck" type="checkbox">
+                    <input class="monInput" type="text" placeholder="Login / Email..."><br>
+                    <input class="monInput" type="password" placeholder="Password..."><br>
+                    <input class="check" type="checkbox">
                     <label for="">Remember Password</label>
                 </form>
             </div>
             <div class="divRegister">
                 <form class="registerForm">
-                    <input class="Rpseudo" type="text" placeholder="Login"><br>
-                    <input class="Rpass" type="password" placeholder="Password"><br>
-                    <input class="RCpass" type="password" placeholder="Confirm password"><br>
-                    <input class="Rcheck" type="checkbox">
-                    <label for="">Remember Password</label>
+                    <input class="monInput" type="text" placeholder="Login..."><br>
+                    <input class="monInput" type="text" placeholder="Email..."><br>
+                    <input class="monInput" type="password" placeholder="Password..."><br>
+                    <input class="monInput" type="password" placeholder="Confirm password..."><br>
+                    <input class="check" type="checkbox">
+                    <label class="label" for="">Remember Password</label>
                 </form>
             </div>
         </div>
