maj BTN J/N OK !

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <script src="./js/index.js" defer></script>
     <title>Mon superbe Formulaire Login Register</title>
 </head>
-<body>
+<body class="light">
     <h1>Mon superbe formulaire Login Register</h1>
+    
+    <button class="btnJN">
+        <div class="cercle"></div>
+    </button>
 
     <div class="container">
         <div class="divBtn">
@@ -26,10 +30,10 @@
                     <input class="monInput" type="password" placeholder="Password..."><br>
                     <div class="divCheck">
                         <label for="">Remember Password : </label>
-                        <input type="radio" name="demo2" class="demo2 demoyes" id="demo2-a" checked>
-                        <label for="demo2-a">Oui</label>
-                        <input type="radio" name="demo2" class="demo2 demono" id="demo2-b">
-                        <label for="demo2-b">Non</label>
+                        <input type="radio" name="demo1" class="demo1 demoyes" id="demo1-a" checked>
+                        <label for="demo1-a">Oui</label>
+                        <input type="radio" name="demo1" class="demo1 demono" id="demo1-b">
+                        <label for="demo1-b">Non</label>
                     </div>
                 </form>
             </div>
@@ -41,10 +45,10 @@
                     <input class="monInput" type="password" placeholder="Confirm password..."><br>
                     <div class="divCheck">
                         <label for="">Remember Password : </label>
-                        <input type="radio" name="demo1" class="demo1 demoyes" id="demo1-a" checked>
-                        <label for="demo1-a">Oui</label>
-                        <input type="radio" name="demo1" class="demo1 demono" id="demo1-b">
-                        <label for="demo1-b">Non</label>
+                        <input type="radio" name="demo2" class="demo2 demoyes" id="demo2-a">
+                        <label for="demo2-a">Oui</label>
+                        <input type="radio" name="demo2" class="demo2 demono" id="demo2-b" checked>
+                        <label for="demo2-b">Non</label>
                     </div>
                 </form>
             </div>
